--- a/API_House_Rent/Web.config
+++ b/API_House_Rent/Web.config
@@ -52,4 +52,9 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+	<connectionStrings>
+		<add name="Api_Home_RentEntities" connectionString="metadata=res://*/model.Model1.csdl|res://*/model.Model1.ssdl|res://*/model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Api_Home_Rent;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
+
+</configuration>
