--- a/API_House_Rent/API_House_Rent.csproj
+++ b/API_House_Rent/API_House_Rent.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Auth\CustomerAuth.cs" />
     <Compile Include="Controllers\BillController.cs" />
     <Compile Include="Controllers\CostController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
