--- a/Business Logic Layer/Business Logic Layer.csproj
+++ b/Business Logic Layer/Business Logic Layer.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\AuthService.cs" />
     <Compile Include="Service\BillService.cs" />
     <Compile Include="Service\CostService.cs" />
     <Compile Include="Service\LoginService.cs" />
