--- a/Data Entity Layer/Data Entity Layer.csproj
+++ b/Data Entity Layer/Data Entity Layer.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="AccessFactory\DataAccessFactory.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="InterfaceRepo\IAuth.cs" />
     <Compile Include="model\Bill.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -88,6 +89,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InterfaceRepo\IRepository.cs" />
+    <Compile Include="Repository\AuthRepo.cs" />
     <Compile Include="Repository\BillRepo.cs" />
     <Compile Include="Repository\CostRepo.cs" />
     <Compile Include="Repository\LoginRepo.cs" />
