api house new update

--- a/API_House_Rent/API_House_Rent.csproj
+++ b/API_House_Rent/API_House_Rent.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MoneyController.cs" />
     <Compile Include="Controllers\TanentController.cs" />
+    <Compile Include="Controllers\userController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
