--- a/Business Entity Layer/Business Entity Layer.csproj
+++ b/Business Entity Layer/Business Entity Layer.csproj
@@ -47,6 +47,7 @@
     <Compile Include="All Model\MoneyModel.cs" />
     <Compile Include="All Model\TanentModel.cs" />
     <Compile Include="All Model\TokenModel.cs" />
+    <Compile Include="All Model\userModel.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
